fix: scrollbar padding issue solved

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -4,30 +4,30 @@
 /* -----------------scrollbar------------------ */
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+	width: 10px;
 }
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px rgb(104, 102, 102);
-    height: 10px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-} 
+	box-shadow: inset 0 0 5px rgb(104, 102, 102);
+	height: 10px;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-o-border-radius: 10px;
+}
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #A8A8A8;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-} 
+	background: #a8a8a8;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-o-border-radius: 10px;
+}
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #575656; 
+	background: #575656;
 }
 nav {
 	box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
@@ -99,6 +99,10 @@ button.checkout-btn:hover {
 .side-panel-close {
 	right: -400px;
 }
+.panel-body {
+	height: 316px;
+	overflow-y: auto;
+}
 .panel-body,
 .cart-product-body {
 	position: relative;
@@ -110,9 +114,6 @@ button.checkout-btn:hover {
 }
 .cart-product-body {
 	justify-content: unset;
-	height: 325px;
-	overflow-y: auto;
-	scroll-padding: 20px 0px 20px 0px;
 }
 .cart-product-body .breaker {
 	position: relative;
